<FIX/Style> fixed z-index of Cart Pop-up

--- a/styles/header.css
+++ b/styles/header.css
@@ -29,6 +29,7 @@ header{
   top:0;
   bottom:0;
   left:0;
+  z-index: 15;
 
   background:#FFFFFF;
   box-shadow:300px 50px 0px 50px rgba(0,0,0,0.5);
@@ -97,7 +98,7 @@ nav{
   position:absolute;
   top:5rem;
   left:-15rem;
-  z-index: -1;
+  z-index: 5;
 
   width:28rem;
   height:18rem;
